--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Your awesome title
-author: GitHub User
+theme: minima
+title: GitHub Pages
+author: TC14
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
